Clean and products is correct with db tests
