# src/models/Product.ts
@@ -1,8 +1,0 @@
-// export interface Product {
-//   id: number;
-//   title: string;
-//   price: number;
-//   category: string;
-//   description: string;
-//   image: string;
-// }
